2008-10-01	Joel Sherrill <joel.sherrill@oarcorp.com>

	* shell/preface.texi: Bump version to 4.9.99.0

2008-09-30	Joel Sherrill <joel.sherrill@oarcorp.com>

	* bsp_howto/timer.t: Eliminate uses of old benchmark timer names.

2008-09-25	Joel Sherrill <joel.sherrill@oarcorp.com>

	* setup.def, started/buildc.t: Update.

2008-09-23	Joel Sherrill <joel.sherrill@OARcorp.com>

	* bsp_howto/BSPInitFlowchart-49.png: Update figure.

2008-09-18	Miao Yan <yanmiaobest@gmail.com>

	* user/conf.t: Add CONFIGURE_USE_DEVFS_AS_BASE_FILESYSTEM and
	CONFIGURE_APPLICATION_DISABLE_FILESYSTEM.

2008-09-17	Joel Sherrill <joel.sherrill@oarcorp.com>

	* shell/rtems.t, user/conf.t, user/stackchk.t: Rename STACK_CHECKER_ON
	to more appropriate CONFIGURE_STACK_CHECKER_ENABLED.

2008-09-17	Joel Sherrill <joel.sherrill@OARcorp.com>

	* user/conf.t: Fix typo.

2008-09-17	Joel Sherrill <joel.sherrill@oarcorp.com>

	* user/conf.t: Add support for optionally having a unified work area.
	In other words, the RTEMS Workspace and C Program Heap are the same
	pool of memory.

2008-09-09	Joel Sherrill <joel.sherrill@oarcorp.com>

	* bsp_howto/Developer-User-Timeline.png: Correct figure.

2008-09-09	Ralf Corsépius <ralf.corsepius@rtems.org>

	* user/chains.t, user/conf.t, user/object.t, user/userext.t:
	More "bool" cleanup.
	* bsp_howto/ata.t, bsp_howto/rtc.t, networking/networkapp.t,
	user/chains.t, user/stackchk.t: Convert to "bool".

2008-09-09	Ralf Corsépius <ralf.corsepius@rtems.org>

	* user/datatypes.t: Add deprecation notices to 
	"rtems_boolean", "rtems_single", "rtems_double".
	* user/intr.t, user/userext.t: Convert to "bool".

2008-09-08	Joel Sherrill <joel.sherrill@oarcorp.com>

	* bsp_howto/timer.t: Update documentation to reflect Timer Driver
	renaming.

2008-09-05	Joel Sherrill <joel.sherrill@OARcorp.com>

	* bsp_howto/clock.t: The Shared Memory Driver no longer requires the
	special IOCTL in Clock_control. This was a hack which has existed